@@ -1,6 +1,10 @@
 ispCP ω 1.0.3 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2009-09-27 Daniel Andreca
+	- GUI:
+		* Fixed #1974: Reseller properties cannot be edited after working with his domains
+
 2009-09-27 Christian Hernmarck
 	- ENGINE:
 		* Fixed #2008: Alias + Subdomain: not all placeholders filled
